--- a/sections/bn-image-with-text-blocks.liquid
+++ b/sections/bn-image-with-text-blocks.liquid
@@ -2,13 +2,13 @@
     {% for block in section.blocks %} 
         {% if  block.settings.three_columns_image != blank  %}
             <div class="bn_image_with_text_3_columns_item">
-                <div class="bn_image_with_text_item_image_container">
+                <!-- <div class="bn_image_with_text_item_image_container">
                     <img src="{{ block.settings.three_columns_image  | img_url: '800x'}}">
-                </div>
-                <div class="bn_image_with_text_item_text_container">
+                </div> -->
+                <!-- <div class="bn_image_with_text_item_text_container">
                     <h2>{{ block.settings.three_columns_heading }}</h2>
                     <p>{{ block.settings.three_columns_subheading }}</p>
-                </div>
+                </div> -->
             </div>
         {% endif %} 
     {% endfor %}
